# knoxis

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  entrypoint.sh  manage.py  pyproject.toml
backend/apps/accounts/: admin.py  middleware.py  models.py  serializers.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py
backend/apps/core/: cpf.py  exceptions.py  middleware.py  mixins.py  models.py  permissions.py  urls.py
backend/apps/core/management/commands/: seed_dev.py
backend/apps/core/migrations/: 0001_initial.py
backend/apps/elections/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/elections/migrations/: 0001_initial.py
backend/apps/reports/: urls.py  views.py
backend/apps/voting/: admin.py  apps.py  apurador.py  models.py  urls_admin.py  urls_public.py  views_admin.py  views_public.py
backend/apps/voting/migrations/: 0001_initial.py  0002_unique_partial_indexes.py
backend/knoxis/: urls.py  wsgi.py
backend/knoxis/settings/: base.py  dev.py  prod.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth.py  test_schema_invariant.py  test_voting.py
backend/tests/unit/: test_apurador.py  test_cpf.py
docs/: 00-visao-geral.md
docs/01-especificacoes/: glossario.md  historias-de-usuario.md  regras-de-negocio.md  requisitos.md
docs/02-arquitetura/: backend.md  (+4 more)
frontend/: Dockerfile  index.html  package.json  tailwind.config.ts  vite.config.ts
infra/: README.md  nginx.conf
(+39 files in other folders)
